# DoThis__To_Do_List

./: README.md  Readme.md
DoThis_Client/: DoThis_Client.sln
DoThis_Client/DoThis_Client/: App.xaml  App.xaml.cs  DoThis_Client.csproj
DoThis_Client/DoThis_Client/Models/: ColumnModel.cs  TaskModel.cs
DoThis_Client/DoThis_Client/Service/: ColumnAndAddColumnTemplateSelector.cs  TaskAndAddButtonTemplateSelector.cs
DoThis_Client/DoThis_Client/ViewModels/: MainViewModel.cs
DoThis_Client/DoThis_Client/Views/: EditTaskDialog.xaml  EditTaskDialog.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NewNameDialog.xaml  NewNameDialog.xaml.cs
DoThis_Client/DoThis_Client/proto/: todo.proto
DoThis_Server/: CMakeLists.txt
DoThis_Server/proto/: todo.proto
DoThis_Server/src/: server.cpp
